fix: fixed bug where the panel content overflowed

--- a/packages/plugin-datasource-pane/src/pane/index.scss
+++ b/packages/plugin-datasource-pane/src/pane/index.scss
@@ -4,7 +4,7 @@ $cls-prefix: "lowcode-plugin-datasource-pane";
 
 .#{$cls-prefix}-container {
   overflow-y: auto;
-  margin: 8px;
+  padding: 8px;
   height: 100%;
   >.next-tabs {
     display: flex;
